--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       database__connection__user: root
       database__connection__password: pnWHPCnYghcXjj8rnUhUUnwH
       database__connection__database: ghost
+    depends_on:
+      - db
 
   db:
     image: mysql:5.7
